fix : navbar z-index관련 버그수정
Card Component의 Img-hover시 Nav-bar위로 덮어씌어지는 현상이 있었음
Nav-bar z-index를 주어 해결

--- a/src/component/shared/header/Header.css
+++ b/src/component/shared/header/Header.css
@@ -11,6 +11,7 @@
   top: 0;
   left: 50%;
   transform: translate(-50%, 0);
+  z-index: 99;
 }
 
 .nav-item {
